# gateway-rs

./: .env  Cargo.toml
gateway/: Cargo.toml  build.rs
gateway/src/: main.rs
gateway/src/axum/: handlers.rs  mod.rs
gateway/src/cli/: mod.rs
gateway/src/graphql/: mod.rs  query.rs
gateway/src/grpc/: handlers.rs  mod.rs
gateway/src/hybrid/: mod.rs
graphql/: schema.gql
proto/: gateway.proto
