[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
async-graphql = "4.0.16"
async-graphql-axum = "4.0.16"
axum = "0.5.17"
clap = { version = "4.0.26", features = ["derive"] }
dotenvy = "0.15.6"
futures = "0.3.25"
hyper = "0.14.23"
pin-project = "1.0.12"
prost = "0.11.2"
tokio = { version = "1.22.0", features = ["full"] }
tonic = "0.8.2"

[build-dependencies]
tonic-build = "0.8.2"
